Fix link control styles to prevent scrollbar (#27777)

--- a/packages/block-editor/src/components/link-control/style.scss
+++ b/packages/block-editor/src/components/link-control/style.scss
@@ -171,6 +171,7 @@ $block-editor-link-control-number-of-actions: 1;
 		display: block;
 		margin-bottom: 0.2em;
 		font-weight: 500;
+		position: relative;
 
 		mark {
 			font-weight: 700;
